# aoc-2024

./: .gitignore  Cargo.toml  README.md
benches/: solutions.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  main.rs  test.rs
