[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
arrayvec = "0.7.6"
clap = { version = "4.5.21", features = ["derive", "string"] }
fxhash = "0.2.1"
itertools = "0.13.0"
memchr = "2.7.4"
nom = "7.1.3"
smallvec = { version = "1.13.2", features = ["const_new"] }

[profile.release]
debug = true
codegen-units = 1
lto = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "solutions"
harness = false
